made navbar styling fit the style of rest of page, adjusted navbar to prevent overflow on medium sized screns and made mobile navbar better fit styling of rest of pages

--- a/client_side/web-app/src/App.css
+++ b/client_side/web-app/src/App.css
@@ -9,9 +9,9 @@ body {
     linear-gradient(to right, white 1px, transparent 1px),
     linear-gradient(to bottom, white 1px, transparent 1px); */
     background-image:
-    linear-gradient(to bottom, transparent 3px, rgb(13, 87, 87) 3px),
+    linear-gradient(to bottom, transparent 5px, rgb(13, 87, 87) 5px),
     linear-gradient(to right, white 1px, transparent 1px),
-    linear-gradient(to right, transparent 3px, rgb(13, 87, 87) 3px),
+    linear-gradient(to right, transparent 5px, rgb(13, 87, 87) 5px),
     linear-gradient(to bottom, white 1px, transparent 1px);
     
   font-family: 'Ubuntu', sans-serif;
@@ -107,7 +107,28 @@ h2, h3, h4 {
 }
 
 .graph-container {
-  background-color: blueviolet;
+  background-color: rgb(75, 0, 125);
+  margin-top: 1.5em;
+  border-radius: 10px;
+  box-shadow: inset 0 0 20px #00f8aa;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  overflow: visible;
+  /* margin-top: 1.5em; */
+}
+/* TODO: wip thing was thinking to do but may removeor come back to */
+/* .graph-tab {
+  position: relative;
+  top: -50px;
+  height: 50px;
+  width: 50%;
+  background-color: rgb(75, 0, 125);
+} */
+
+@media screen and (max-width: 1000px) {
+  body {
+    padding: 2em
+  }
 }
 
 @media screen and (max-width: 650px) {
