--- a/client_side/web-app/src/components/InfoIcon.css
+++ b/client_side/web-app/src/components/InfoIcon.css
@@ -2,6 +2,7 @@
     /* display: inline-block;
     vertical-align: top; */
     padding: 0.5em;
+    padding-top: 1em;
     /* padding-bottom: 0; */
     float: left;
 }
